--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -112,6 +112,14 @@
         <table class="table-striped" style="width: 100%;">
             <tbody>
                 <tr>
+                    <td><a href="{% url 'tenx:chip_list' %}">Chips</a> <i class="counter">{{ tenx_chips_size }}</i></td>
+                    <td>
+                        <p style="float: right;">
+                            <a href="{% url 'tenx:chip_create' %}"><i class="fa fa-plus" aria-hidden="true" style="color: green;"></i> Add</a>
+                        </p>
+                    </td>
+                </tr>
+                <tr>
                     <td><a href="{% url 'tenx:library_list' %}">Libraries</a> <i class="counter">{{ tenx_library_size }}</i></td>
                     <td>
                         <p style="float: right;">
