--- a/core/templates/core/library_detail.html
+++ b/core/templates/core/library_detail.html
@@ -361,6 +361,7 @@
             <table id="sequencing-datatable" class="table-striped table-bordered">
                 <thead>
                     <tr>
+                        <th>ID</th>
                         <th>Sample ID</th>
                         <th>Chip ID</th>
                         <th>Adapter</th>
@@ -371,7 +372,8 @@
                 <tbody>
                     {% for sequencing in library.dlpsequencing_set.all %}
                         <tr>
-                            <td><a href="{{ sequencing.get_absolute_url }}">{{ sequencing.library.sample.sample_id }}</a></td>
+                            <td><a href="{{ sequencing.get_absolute_url }}">{{ sequencing.id }}</a></td>
+                            <td><a href="{{ sequencing.library.sample.get_absolute_url }}">{{ sequencing.library.sample.sample_id }}</a></td>
                             <td>{{ sequencing.library.pool_id }}</td>
                             <td>{{ sequencing.adapter }}</td>
                             <td>{{ sequencing.get_sequencing_instrument_display }}</td>
@@ -395,7 +397,8 @@
                 <tbody>
                     {% for sequencing in library.pbalsequencing_set.all %}
                         <tr>
-                            <td><a href="{{ sequencing.get_absolute_url }}">{{ sequencing.library.sample.sample_id }}</a></td>
+                            <td><a href="{{ sequencing.get_absolute_url }}">{{ sequencing.id }}</a></td>
+                            <td><a href="{{ sequencing.library.sample.get_absolute_url }}">{{ sequencing.library.sample.sample_id }}</a></td>
                             <td>{{ sequencing.adapter }}</td>
                             <td>{{ sequencing.get_sequencing_instrument_display }}</td>
                             <td>{{ sequencing.submission_date }}</td>
@@ -418,7 +421,8 @@
                 <tbody>
                     {% for sequencing in library.tenxsequencing_set.all %}
                         <tr>
-                            <td><a href="{{ sequencing.get_absolute_url }}">{{ sequencing.library.sample.sample_id }}</a></td>
+                           <td><a href="{{ sequencing.get_absolute_url }}">{{ sequencing.id }}</a></td>
+                            <td><a href="{{ sequencing.library.sample.get_absolute_url }}">{{ sequencing.library.sample.sample_id }}</a></td>
                             <td>{{ sequencing.adapter }}</td>
                             <td>{{ sequencing.get_sequencing_instrument_display }}</td>
                             <td>{{ sequencing.submission_date }}</td>
