filed altered for sample, few views editted (#46)
minor ui fix

minor: python 3 issues

Require user authentication to view colossus

midcheck

taggit removed from library

tag removed from library

migration not dependent on Tags

minor form fix

view fix

api views fix

random squash

merge fix

merge

minor: python 3 issues

Require user authentication to view colossus

--- a/core/templates/core/library_create.html
+++ b/core/templates/core/library_create.html
@@ -28,7 +28,7 @@
                             {% if field.name == "projects" %}
                                 <select class="selectpicker" id="projects" name="projects" multiple data-none-selected-text="--------">
                                     {% for project in projects %}
-                                        <option>{{ project }}</option>
+                                        <option value={{ project.id }} >{{ project }}</option>
                                     {% endfor %}
 
                                 </select>
