--- a/core/templates/core/library_detail.html
+++ b/core/templates/core/library_detail.html
@@ -455,6 +455,7 @@
                                 <th>Jira ticket</th>
                                 <th>Montage</th>
                                 <th>Pipeline version</th>
+                                <th>Aligner</th>
                                 <th>Analysis run status</th>
                                 <th>Submission date</th>
                             </tr>
@@ -466,6 +467,7 @@
                                     <td><a href="https://www.bcgsc.ca/jira/browse/{{ analysis.analysis_jira_ticket }}">{{ analysis.analysis_jira_ticket }}</a></td>
                                     <td><a href="https://52.235.35.201/?dashboard={{ analysis.analysis_jira_ticket }}">{{ analysis.analysis_jira_ticket }}</a></td>
                                     <td>{{ analysis.version.version }}</td>
+                                    <td>{{ analysis.aligner }}</td>
                                     <td>{{ analysis.analysis_run.get_run_status_display }}</td>
                                     <td>{{ analysis.analysis_submission_date }}</td>
                                 </tr>
