--- a/core/templates/core/library_list.html
+++ b/core/templates/core/library_list.html
@@ -102,22 +102,12 @@
                             <td style="text-align: center;">{{ library.num_sublibraries }}</td>
                         {% endif %}
 
-                        {% if library.is_sequenced %}
+                        {% if library.dlplibraryquantificationandstorage.qc_check == 'N' %}
+                            <td style="text-align: center"><i class="fa fa-times" aria-hidden="true" style="color: red" title="Will not sequence"></i></td>
+                        {% elif library.num_sequencings != 0 and library.max_sequencing_analysis == library.num_sequencings %}
                             <td style="text-align: center;"><i class="fa fa-check" aria-hidden="true" style="color: green;" title="Sequenced"></i></td>
-                        {% elif library.dlplibraryquantificationandstorage.qc_check == 'P' %}
-                            <td style="text-align: center"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color: orange" title="Will sequence"></i></td>
-                        {% elif library.dlplibraryquantificationandstorage.qc_check == 'N' %}
-                            <td style="text-align: center"><i class="fa fa-times" aria-hidden="true" style="color: red" title="Will not sequence"></i></td>
-                        {% elif library.pballibraryquantificationandstorage.qc_check == 'P' %}
-                            <td style="text-align: center"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color: orange" title="Will sequence"></i></td>
-                        {% elif library.pballibraryquantificationandstorage.qc_check == 'N' %}
-                            <td style="text-align: center"><i class="fa fa-times" aria-hidden="true" style="color: red" title="Will not sequence"></i></td>
-                        {% elif library.tenxlibraryquantificationandstorage.qc_check == 'P' %}
-                            <td style="text-align: center"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color: orange" title="Will sequence"></i></td>
-                        {% elif library.tenxlibraryquantificationandstorage.qc_check == 'N' %}
-                            <td style="text-align: center"><i class="fa fa-times" aria-hidden="true" style="color: red" title="Will not sequence"></i></td>
                         {% else %}
-                            <td style="text-align: center"></td>
+                             <td style="text-align: center"><i class="fa fa-exclamation-triangle" aria-hidden="true" style="color: orange" title="Will sequence"></i></td>
                         {% endif %}
 
                         <td>{{ library.result }}</td>
