--- a/core/templates/core/tenx/tenxpool_list.html
+++ b/core/templates/core/tenx/tenxpool_list.html
@@ -2,11 +2,11 @@
 
 {% load staticfiles %}
 
-{% block title %}List of TenX Chips{% endblock %}
+{% block title %}List of TenX Pools{% endblock %}
 
 {% block body %}
 <div class="container" style="padding: 0; margin-bottom: 5px;">
-    <h4 style="float: left;">Select a chip to view its details</h4>
+    <h4 style="float: left;">Select a pool to view its details</h4>
     <a class="btn btn-primary btn-sm" style="float: right; margin-top: 5px;" href="{% url 'tenx:pool_create' %}">Add TenxPool</a>
 </div>
 <div class="container" style="background-color: #F5F5F5;">
