--- a/core/templates/core/tenx/tenxpool_detail.html
+++ b/core/templates/core/tenx/tenxpool_detail.html
@@ -87,8 +87,11 @@
                     {% endfor %}
                 </tbody>
             {% else %}
-                <tr><h5><i class="text-warning">There is no 10x sequencing related to this Pool!</i></h5></tr>
+                <tr>
+                    <h5><i class="text-warning">There is no 10x sequencing related to this Pool!</i></h5>
+                </tr>
             {% endif %}
+             <a href="{% url 'tenx:sequencing_create' %}"><i class="fa fa-plus" aria-hidden="true" style="color:green;"></i> Add Sequencing</a>
         </table>
     </div>
 </div>
