--- a/core/templates/core/tenx/tenxpool_detail.html
+++ b/core/templates/core/tenx/tenxpool_detail.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-{% block title %}{{chip.get_id}} Details{% endblock %}
+{% block title %}{{pool.pool_name}} Details{% endblock %}
 
 {% block body %}
 <div class="container detail-container">
