--- a/core/templates/core/tenx/tenxpool_update.html
+++ b/core/templates/core/tenx/tenxpool_update.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="container graybg">
-    <form action="{% url 'tenx:pool_update' %}" method="POST">
+    <form action="{% url 'tenx:pool_update' pk=pk %}" method="POST">
         {% csrf_token %}
         <table class="table-condensed">
 
