--- a/core/templates/core/tenx/tenxpool_update.html
+++ b/core/templates/core/tenx/tenxpool_update.html
@@ -26,9 +26,9 @@
             </div>
 
             <div style="display: inline-block; vertical-align:top;">
-            <span id="add-items" class="glyphicon glyphicon-plus" style="padding-top:30px"></span>
+            <span id="add-items" class="glyphicon glyphicon-chevron-right" style="padding-top:30px"></span>
                 <br/>
-            <span id="remove-items" class="glyphicon glyphicon-minus"></span>
+            <span id="remove-items" class="glyphicon glyphicon-chevron-left"></span>
             </div>
 
             <div class="form-group" style="display: inline-block; vertical-align:top;">
