minor: dlp library sample detail serialized
still under test

test

api for test purpose

mid update

minor fix

views and forms removed

pbal views update

print statement removed

python3 dependencies

formatting

--- a/core/templates/core/project_list.html
+++ b/core/templates/core/project_list.html
@@ -30,7 +30,7 @@
                         {{ project.dlplibrary_set.count }}
                     </td>
                     <td>
-                        {{ project.pballibrary_set.count }}
+                        {{ project.pballibrary_projects.count }}
                     </td>
                     <td>
                         {{ project.tenxlibrary_set.count }}
