tenx sequencing update

--- a/core/templates/core/tenx/tenxchip_detail.html
+++ b/core/templates/core/tenx/tenxchip_detail.html
@@ -54,7 +54,7 @@
             {% endif %}
         </table>
     </div>
-
+  <a href="{% url 'tenx:library_create' %}"><i class="fa fa-plus" aria-hidden="true" style="color:green;"></i> Add Library</a>
 </div>
 
 <div class="container" style="margin-bottom: 5px;">
