--- a/core/templates/core/library_create.html
+++ b/core/templates/core/library_create.html
@@ -153,6 +153,21 @@
         $(document).ready(function() {
             if ("{{ library_type }}" == "tenx")
                 this.getElementById('id_name').style.display = 'none';
+
+            var prev = document.referrer
+                if (prev.indexOf("chip") > -1 &&
+                        prev.indexOf("detail") > -1 ){
+                        var field = document.getElementById("id_chips")
+                        var res = prev.split("/");
+                        for (var i=0, len=field.options.length; i<len; i++) {
+                        opt = field.options[i];
+                        if (res[res.length-1] == opt.value) {
+                        opt.selected = true
+                        document.getElementById('id_chips').onchange();
+                        break;
+                    }
+                }
+            }
         });
 
 
@@ -189,3 +204,4 @@
         }
     </script>
 {% endblock %}
+
