--- a/core/templates/core/add_watchers.html
+++ b/core/templates/core/add_watchers.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-{% block title %}JIRA Ticket: {{jira_ticket}}{% endblock %}
+{% block title %}JIRA Ticket(s): {{jira_ticket}}{% endblock %}
 
 {% block body %}
     {% if library_type == 'dlp' %}
