final script edit

--- a/core/templates/core/scripts/library_script_block.html
+++ b/core/templates/core/scripts/library_script_block.html
@@ -4,7 +4,7 @@
         $(document).ready(function() {
             if ("{{ library_type }}" == "tenx")
                 this.getElementById('id_name').style.display = 'none';
-                if ("{{name}}"  !== null){
+                if ("{{name}}".length  > 4 ){
                     tenx_library_naming = "{{name}}".split("_")
                 }
 
