--- a/core/templates/core/library_detail.html
+++ b/core/templates/core/library_detail.html
@@ -296,16 +296,6 @@
                         </tbody>
                     </table>
                 </div>
-
-                {# Button to wipe 10x library conditions #}
-                {% if library_type == 'tenx' %}
-                    <div style="padding-top: 1em">
-                        <form action="{% url 'tenx:library_conditions_delete' library.pk %}" method="post">
-                            {% csrf_token %}
-                            <button type="submit" name="library-conditions-delete" class="btn btn-danger btn-sm">Wipe conditions</button>
-                        </form>
-                    </div>
-                {% endif %}
             {% else %}
                 <h5><i class="text-warning">There is no condition metadata for library!</i></h5>
             {% endif %}
@@ -355,7 +345,7 @@
     </div>
 {% endif %}
 <!-- end of Sublibrary Information -->
-
+{% if library_type == 'dlp' or library_type == 'pbal' %}
 <!-- Sequencing Information -->
 <div class="container detail-bordered-container">
     <h4>Sequencing Information</h4>
@@ -412,31 +402,6 @@
                 </tbody>
             </table>
         </div>
-    {% elif library.tenxsequencing_set.all %}
-        <div class="table-responsive">
-            <table id="sequencing-datatable" class="table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Sample ID</th>
-                        <th>Adapter</th>
-                        <th>Sequencing instrument</th>
-                        <th>Submission date</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for sequencing in library.tenxsequencing_set.all %}
-                        <tr>
-                           <td><a href="{{ sequencing.get_absolute_url }}">{{ sequencing.id }}</a></td>
-                            <td><a href="{{ sequencing.library.sample.get_absolute_url }}">{{ sequencing.library.sample.sample_id }}</a></td>
-                            <td>{{ sequencing.adapter }}</td>
-                            <td>{{ sequencing.get_sequencing_instrument_display }}</td>
-                            <td>{{ sequencing.submission_date }}</td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
     {% else %}
         <h5><i class="text-warning">There is no sequencing information for this library!</i></h5>
     {% endif %}
@@ -444,7 +409,7 @@
     <a href="{% url library_type|add:':sequencing_create_from_library' from_library=library.pk %}"><i class="fa fa-plus" aria-hidden="true" style="color:green;"></i> Add Sequencing</a></p>
 </div>
 <!-- end of Sequencing Information -->
-
+{% endif %}
 <!-- Analysis Information -->
 {% if library_type == 'dlp' %}
     <div class="container detail-bordered-container">
